--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,4 +4,5 @@
 /* Styling for base HTML elements */
 @import url('./elements/global.css');
 
-
+/* Base utilities */
+@import url('./utilities/utilities.css');
