--- a/src/components/Icon/src/icon.css
+++ b/src/components/Icon/src/icon.css
@@ -8,13 +8,13 @@
 }
 
 :where(.c-icon.c-small) {
-    --icon-size: 0.75em;
+    --icon-size: 0.75rem;
 }
 
 :where(.c-icon.c-normal) {
-    --icon-size: 1em;
+    --icon-size: 1rem;
 }
 
 :where(.c-icon.c-big) {
-    --icon-size: 1.25em;
+    --icon-size: 1.25rem;
 }
