--- a/src/components/Accordion/assets/docs.css
+++ b/src/components/Accordion/assets/docs.css
@@ -1,4 +1,4 @@
 .accordion__button--active[aria-expanded="true"] {
-    background-color: rgb(153, 123, 123);
-    transition: background-color 500ms ease-in-out;
+    background-color: hsl(34, 62%, 50%);
+    transition: background-color 120ms ease;
 }
