--- a/src/components/Accordion/src/Accordion.css
+++ b/src/components/Accordion/src/Accordion.css
@@ -1,16 +1,15 @@
 :where(.c-accordion__item) {
-    border-top: 1px solid var(--clr-neutral-200);
-    margin-top: 2px;
+    border-top: 1px solid var(--ui-color-gray-200);
 }
 
 :where(.c-accordion__item:last-of-type) {
-    border-bottom: 1px solid var(--clr-neutral-200);
+    border-bottom: 1px solid var(--ui-color-gray-200);
 }
 
 :where(.c-accordion__button) {
-    --outline-color: var(--clr-primary-400);
     width: 100%;
     padding: 0.5rem 1rem;
+    display: flex;
     align-items: center;
     justify-content: space-between;
     background: transparent;
@@ -18,12 +17,8 @@
     border: 0px;
 }
 
-:where(.c-accordion__button:focus) {
-    box-shadow: var(--clr-primary-400) 0px 0px 0px 2px;
-}
-
 :where(.c-accordion__button:hover) {
-    background-color: rgb(0, 0, 0, 0.04);
+    background-color: var(--ui-color-gray-200);
 }
 
 .c-accordion__panel {
