--- a/src/components/Audio/src/audio.css
+++ b/src/components/Audio/src/audio.css
@@ -9,7 +9,7 @@
 
 .c-audio::-webkit-media-controls-panel {
     border-radius: 1rem;
-    background: rgb(225, 225, 230);
+    background-color: rgb(225, 225, 230);
 }
 
 :where(.c-audio--small) {
@@ -30,28 +30,32 @@
     display: none;
 }
 
-:where(.c-button) {
-    --audio-btn-background: var(--clr-primary-800);
-    --audio-btn-icon-color: var(--clr-common-white-100);
-    --audio-btn-background-hover: var(--clr-primary-400);
+:where(.c-audio__button) {
+    --audio-btn-background: var(--ui-color-gray-800);
+    --audio-btn-icon-color: var(--ui-color-gray-100);
+    --audio-btn-background-hover: var(--ui-color-gray-600);
 
     position: relative;
-    width: 3rem;
-    height: 3rem;
+    width: var(--audio-btn-size, 3rem);
+    height: var(--audio-btn-size, 3rem);
     transition: background-color 0.25s ease, transform 0.25s ease;
 }
 
-.c-button {
+:where(.c-audio__button--small) {
+    --audio-btn-size: 2rem;
+}
+
+.c-audio__button {
     --button-border-color: transparent;
     --button-bg-color: var(--audio-btn-background);
 }
 
-:where(.c-button:hover) {
+:where(.c-audio__button:hover) {
     background-color: var(--audio-btn-background-hover);
 }
 
-.c-button::before,
-.c-button::after {
+.c-audio__button::before,
+.c-audio__button::after {
     position: absolute;
     content: "";
     top: 50%;
@@ -62,6 +66,12 @@
     background-color: var(--audio-btn-icon-color);
     transform-origin: 50% 100%;
     transition: clip-path 0.5s ease;
+}
+
+.c-audio__button--small::before,
+.c-audio__button--small::after {
+    width: .9rem;
+    height: .9rem;
 }
 
 .is-button-paused::before {
@@ -80,11 +90,12 @@
     clip-path: polygon(65% 0, 100% 0, 100% 100%, 65% 100%);
 }
 
-:where(.audio-bar) {
-    --audio-background-color: #f5f5f5;
-    --audio-icon-color: var(--clr-primary-700);
-    --audio-slider-color: var(--clr-complementary-400);
+:where(.c-audio__bar) {
+    --audio-background-color: var(--ui-color-gray-100);
+    --audio-icon-color: var(--ui-color-gray-800);
+    --audio-slider-color: var(--ui-color-gray-700);
     --audio-border-radius: 100vmax;
+
     position: relative;
     display: grid;
     grid-auto-flow: column;
@@ -92,7 +103,7 @@
     isolation: isolate;
     z-index: 1;
     gap: 0.5em;
-    width: fit-content;
+    width: min(100%, var(--audio-size, 18rem));
     margin-inline: auto;
     padding: 0.5rem;
     background-color: var(--audio-background-color);
@@ -100,24 +111,34 @@
     border-radius: var(--audio-border-radius);
 }
 
-:where(.audio-bar small) {
-    font-size: 0.75rem;
+:where(.c-audio__bar--small) {
+    --audio-size: 12.5rem;
+    padding: 0.3rem;
+    gap: 0.2em;
 }
 
-:where(.audio-bar[data-a11y="true"]) {
+:where(.c-audio__bar small) {
+    font-size: 0.82rem;
+}
+
+:where(.c-audio__bar--small small) {
+    font-size: 0.73rem;
+}
+
+:where(.c-audio__bar[data-a11y="true"]) {
     display: none;
 }
 
-html[data-audio="true"] .audio-bar[data-a11y="true"] {
+html[data-audio="true"] .c-audio__bar[data-a11y="true"] {
     display: grid;
 }
 
-:where(.audio-bar input) {
+:where(.c-audio__bar input) {
     --outline-color: var(--audio-icon-color);
     accent-color: var(--audio-slider-color);
 }
 
-:where(.audio-bar button) {
+:where(.c-audio__bar button) {
     aspect-ratio: 1;
     margin: 0;
     padding: 0;
@@ -127,29 +148,34 @@ html[data-audio="true"] .audio-bar[data-a11y="true"] {
     color: inherit;
 }
 
-:where(.volume-control) {
+:where(.c-audio__bar-volume-control) {
     position: absolute;
     top: calc(100% + 2px);
     right: 0;
     background-color: var(--audio-background-color);
 }
 
-:where(.volume-control input) {
+:where(.c-audio__bar-volume-control input) {
     --outline-offset: -2px;
-    -webkit-appearance: slider-vertical;
-    width: 30px;
+    appearance: slider-vertical;
+    width: 1.875rem;
+    height: 4rem;
+    writing-mode: vertical-lr;
+    direction: rtl;
 }
 
-:where(.scrubber) {
+@supports (-webkit-appearance: slider-vertical) {
+    .c-audio__bar-volume-control input {
+        -webkit-appearance: slider-vertical;
+    }
+}
+
+:where(.c-audio__bar-scrubber) {
     width: min(100%, 8.0625rem);
 }
 
 @media screen and (any-hover: none) and (any-pointer: coarse) {
-    :where(.volume-btn) {
+    :where(.c-audio__bar-volume-btn) {
         display: none;
     }
-}
-
-.hidden-description {
-    display: none;
 }
