--- a/src/components/Checkbox/src/checkbox.css
+++ b/src/components/Checkbox/src/checkbox.css
@@ -1,92 +1,93 @@
-.c-input-checkbox {
-    --input-color: blue;
-    --input-border-radius: 0.4375rem;
+.c-input-check {
+    --input-check-bg: var(--ui-color-gray-400);
+    --input-check-clr: var(--ui-color-gray-800);
+    --input-check-border-clr: var(--ui-color-gray-800);
+    --input-check-border-radius: 0.3275rem;
 
     display: flex;
     align-items: center;
     gap: var(--input-checkbox-gap, 0.5em)
 }
 
-.c-input-checkbox:where([data-state="right"]) {
-    --input-color: var(--clr-success-600);
+.c-input-check:where([data-state="right"]) {
+    --input-check-bg: var(--ui-color-gray-400);
 }
 
-.c-input-checkbox:where([data-state="wrong"]) {
-    --input-color: var(--clr-error-600);
+.c-input-check:where([data-state="wrong"]) {
+    --input-check-bg: var(--ui-color-gray-400);
 }
 
-:where(.c-input-label) {
+:where(.c-input-check__label) {
     order: 1;
 }
 
-:where(.c-input-checkbox__box) {
+:where(.c-input-check__box) {
     position: relative;
     min-inline-size: 1.875rem;
     min-block-size: 1.875rem;
-    color: blue;
-    border-radius: var(--input-border-radius);
-    border: 2px solid blue;
+    border-radius: var(--input-check-border-radius);
+    border: 2px solid var(--input-check-border-clr);
+    overflow: hidden;
 }
 
-:where(.c-input-checkbox__box:focus-within) {
-    outline: max(2px, 0.08em) solid blue;
+:where(.c-input-check__box:focus-within) {
+    outline: max(2px, 0.08em) solid var(--input-check-border-clr);
     outline-offset: max(2px, 0.08em);
 }
 
-:where(.c-input-checkbox__check, .c-input-checkbox__icon) {
+:where(.c-input-check__check, .c-input-check__icon) {
     position: absolute;
     inset: 0;
     inline-size: 100%;
     block-size: 100%;
 }
 
-:where(.c-input-checkbox__check) {
+:where(.c-input-check__check) {
     opacity: 0;
     margin: 0;
 }
 
-:where(.c-input-checkbox__icon) {
+:where(.c-input-check__icon) {
     display: grid;
     place-items: center;
     pointer-events: none;
-    color: var(--clr-neutral-100);
+    color: var(--input-check-clr);
     isolation: isolate;
 }
 
-
-.c-input-checkbox__check:checked+.c-input-checkbox__icon svg {
+.c-input-check__check:checked+.c-input-check__icon svg {
     display: block;
+    fill: currentColor;
 }
 
-:where(.c-input-checkbox__icon svg) {
+:where(.c-input-check__icon svg) {
     display: none;
 }
 
-
-.c-input-checkbox__icon::before {
+.c-input-check__icon::before {
     content: "";
     position: absolute;
     width: 100%;
     height: 100%;
     transform: scale(0);
-    transition: 100ms transform ease;
-    box-shadow: inset 0px 0px 0px 2px #ffffff;
+    transition: transform 100ms ease;
+    box-shadow: inset 0 0 0 .16rem #ffffff;
+    border-radius: var(--input-check-border-radius);
+    background-color: var(--input-check-bg);
     z-index: -1;
-    background-color: blue;
     forced-color-adjust: none;
-    border-radius: var(--input-border-radius);
 }
 
 @media screen and (forced-colors: active) {
-    :where(.c-input-checkbox__icon) {
+    :where(.c-input-check__icon) {
         color: Canvas;
     }
 
-    .c-input-checkbox__icon::before {
+    .c-input-check__icon::before {
         background-color: Highlight;
     }
 }
 
-.c-input-checkbox__check:checked+.c-input-checkbox__icon::before {
+.c-input-check__check:checked+.c-input-check__icon::before {
     transform: scale(1);
 }
