--- a/src/components/DragAndDrop/src/drag-and-drop.css
+++ b/src/components/DragAndDrop/src/drag-and-drop.css
@@ -1,16 +1,11 @@
-.c-droppable {
-    --clr-grey: rgba(201, 211, 219, 0.5);
-    --clr-grey-dark: rgba(201, 211, 219, 0.25);
-}
-
 :where(.c-droppable) {
-    height: 340px;
-    box-shadow: inset var(--clr-grey) 0 0 0 1px;
+    padding: 1rem;
+    box-shadow: inset var(--ui-color-gray-500) 0 0 0 1px;
     transition: box-shadow 250ms ease;
 }
 
 :where(.c-droppable--active) {
-    box-shadow: inset var(--clr-grey-dark) 0 0 0 3px;
+    box-shadow: inset var(--ui-color-gray-800) 0 0 0 3px;
 }
 
 .c-draggable {
