--- a/src/components/NumberInput/src/number-input.css
+++ b/src/components/NumberInput/src/number-input.css
@@ -1,16 +1,19 @@
 .c-number-input {
-    --input-border: var(--clr-neutral-400);
-    --input-focus: var(--clr-primary-400);
-    --input-size: 2.5rem;
-    --input-padding-right: 2.5rem;
-    --input-padding-left: 1rem;
-    --border-size: 0.375rem;
-    --transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, outline-offset, transform;
+    --input-number-border: var(--ui-color-gray-600);
+    --input-number-focus: var(--ui-color-gray-800);
+    --input-number-border-size: 0.375rem;
+    --input-number-transition-property: background-color, border-color, color, fill, stroke, opacity;
 }
 
-.c-number-input {
+:where(.c-number-input) {
+    display: grid;
+    grid-template-columns: 1fr 4ch;
     width: 100%;
     position: relative;
+    border-radius: var(--input-number-border-size);
+    border: 1px solid var(--input-number-border);
+    background: inherit;
+    transition: var(--input-number-transition-property), 120ms ease;
 }
 
 :where(.c-number-input__label) {
@@ -18,42 +21,21 @@
 }
 
 :where(.c-number-input__input) {
-    position: relative;
-    padding-block: 0 .0625rem;
-    padding-right: var(--input-padding-right);
-    padding-left: var(--input-padding-left);
-    width: 100%;
-    height: var(--input-size);
+    height: 100%;
     font-size: initial;
     appearance: none;
-    border-radius: var(--border-size);
-    border: 1px solid var(--input-border);
+    border: 1px solid transparent;
     background: inherit;
-    transition: var(--transition-property), 40ms;
 }
 
 .c-number-input__input {
     --outline-size: 2px;
-    --outline-color: var(--input-focus);
+    --outline-color: var(--input-number-focus);
 }
 
-.c-number-input__label:focus-within ~.c-number-input__stepper button > svg {
-    transform:scale(1.9);
-    fill: var(--input-focus);
-}
-
-:where(.c-number-input__stepper) {
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 1px;
-    width: 1.8rem;
-    height: calc(100% - 2px);
-    display: inline-flex;
-    align-items: flex-end;
-    justify-content: center;
-    flex-direction: column;
-    z-index: 2;
+.c-number-input__label:focus-within~.c-number-input__stepper button>svg {
+    transform: scale(1.9);
+    fill: var(--input-number-focus);
 }
 
 .c-number-input__button {
@@ -65,7 +47,6 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    flex: 1 1 auto;
     color: inherit;
     background-color: transparent;
     user-select: none;
@@ -73,8 +54,8 @@
     border: none;
     border-inline-start-width: 1px;
     border-inline-start-style: solid;
-    border-inline-start-color: var(--input-border);
-    transition: var(--transition-property), 300ms;
+    border-inline-start-color: var(--input-number-border);
+    transition: var(--input-number-transition-property), 120ms ease;
 }
 
 :where(.c-number-input__button:active) {
@@ -82,15 +63,15 @@
 }
 
 :where(.c-number-input__button:first-of-type) {
-    border-top-right-radius: var(--border-size);
+    border-top-right-radius: var(--input-number-border-size);
 }
 
 :where(.c-number-input__button:last-of-type) {
     margin-top: -1px;
     border-top-width: 1px;
     border-top-style: solid;
-    border-top-color: var(--input-border);
-    border-bottom-right-radius: var(--border-size);
+    border-top-color: var(--input-number-border);
+    border-bottom-right-radius: var(--input-number-border-size);
 }
 
 :where(.c-number-input__button > svg) {
