--- a/src/components/Tabs/src/tabs.css
+++ b/src/components/Tabs/src/tabs.css
@@ -3,32 +3,31 @@
     margin-bottom: -2px;
     align-items: center;
     justify-content: center;
-    font-size: var(--fs-200);
-    border: 0px;
+    border: none;
     border-bottom-width: .125rem;
     border-bottom-style: solid;
-    border-color: var(--clr-neutral-200);
+    border-color: var(--ui-color-gray-200);
     background: transparent;
     cursor: pointer;
     transition: border-color, color, background, 200ms ease;
 }
 
 .c-tab__button {
-    --outline-color: var(--clr-primary-500);
+    --outline-color: var(--ui-color-gray-500);
 }
 
 :where(.c-tab__button:focus) {
-    box-shadow: var(--clr-primary-500) 0px 0px 0px 2px;
+    box-shadow: var(--ui-color-gray-500) 0px 0px 0px 2px;
     border-bottom-width: 0px;
 }
 
 :where(.c-tab__button[aria-selected="true"]) {
-    color: var(--clr-primary-500);
+    color: var(--ui-color-gray-500);
     border-color: currentcolor;
 }
 
 :where(.c-tab__button:active) {
-    background: var(--clr-neutral-100);
+    background-color: var(--ui-color-gray-100);
 }
 
 :where(.c-tab__list) {
@@ -38,7 +37,7 @@
     flex-direction: row;
     border-bottom-width: 2px;
     border-bottom-style: solid;
-    border-color: var(--clr-neutral-200);
+    border-color: var(--ui-color-gray-800);
 }
 
 :where(.c-tab__panels) {
