--- a/src/components/Tour/src/tour.css
+++ b/src/components/Tour/src/tour.css
@@ -10,10 +10,9 @@
 }
 
 .c-tour-content {
-    --speed-movement: .8s;
-    --color: hsl(220, 62%, 50%);
-    --color-hover: hsl(220, 62%, 17%);
-    transition: transform var(--speed-movement) ease-in-out;
+    --tour-color: var(--ui-color-gray-500);
+    --tour-color-hover: var(--ui-color-gray-800);
+    transition: transform 250ms ease-in-out;
 }
 
 :where(.c-tour-content) {
@@ -26,7 +25,7 @@
     line-height: 1.5;
     border-radius: 0.1875rem;
     background-color: hsl(0, 0%, 100%);
-    box-shadow: 0 0 0 0.125rem var(--color) inset;
+    box-shadow: 0 0 0 0.125rem var(--tour-color) inset;
     z-index: 101;
 }
 
@@ -43,7 +42,7 @@
     width: 100%;
     height: 100%;
     text-align: center;
-    background-color: var(--color);
+    background-color: var(--tour-color);
     transform: scaleX(0%);
     transform-origin: left;
     transition: transform .750s ease-in-out;
@@ -61,14 +60,14 @@
     display: grid;
     place-content: center;
     color: hsl(229, 0%, 83%);
-    background-color: var(--color);
+    background-color: var(--tour-color);
     border-radius: 50%;
     border: 0.125rem solid transparent;
 }
 
 :where(.c-tour-button-container button:hover),
 :where(.c-tour-button-container button:focus) {
-    background-color: var(--color-hover);
+    background-color: var(--tour-color-hover);
 }
 
 :where(.c-tour-button-container button:focus) {
@@ -92,7 +91,6 @@
 }
 
 :where(.c-tour-help) {
-    --animate-delay: 0.2s;
     position: absolute;
     border-radius: 4px;
     border: 1px solid hsl(229, 0%, 83%);
@@ -114,6 +112,6 @@
     text-shadow: 1px 1px 1px rgb(0 0 0 / 30%);
     border: 3px solid hsl(0, 0%, 100%);
     border-radius: 50%;
-    background-color: hsl(220, 62%, 50%);
+    background-color: var(--ui-color-gray-500);
     box-shadow: 0 2px 5px rgb(0 0 0 / 40%);
 }
