--- a/src/components/Pagination/src/pagination.css
+++ b/src/components/Pagination/src/pagination.css
@@ -36,6 +36,10 @@
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 
+.c-pagination-item svg{
+    --icon-size: 1rem;
+}
+
 :where(.c-pagination-item:disabled) {
     opacity: 0.38;
     pointer-events: none;
