--- a/src/styles/utilities/display.css
+++ b/src/styles/utilities/display.css
@@ -2,20 +2,26 @@
 
 [class*="u-flex"] {
     display: flex;
-    gap: var(--gap, 1em);
+    flex-wrap: wrap;
+    gap: var(--flex-gap, 1em);
 }
 
-[class*="u-flex-inline"] {
-    display: inline-flex;
+[class*="u-flex"]>* {
+    flex: 1 1 var(--flex-min, 10ch);
 }
 
 /* Add grid display to any class that has the word "grid" on it */
 
 [class*="u-grid"] {
     display: grid;
-    gap: var(--gap, 1em);
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, var(--grid-min, 30ch)), var(--grid-max, 1fr)));
+    place-content: center;
+    gap: var(--grid-gap, 1em);
 }
 
+[class*="u-wrapper"] {
+    width: min(100% - var(--wrapper-padding, 2rem), var(--wrapper-width, 80ch));
+}
 
 /** 
   Genera un margin-top a todos los elementos hijos directos 
