--- a/src/components/Interpreter/src/interpreter.css
+++ b/src/components/Interpreter/src/interpreter.css
@@ -1,20 +1,24 @@
 :where(.c-interpreter__container) {
+    --interpreter-clr-list: #00294a;
+    --interpreter-size-svg: 1.5rem;
+    --interpreter-border-radious: .532rem;
+    --interpreter-bg: #ffffff;
+    --interpreter-border-ratio: 1.4;
+    --interpreter-zIndex: 5;
+
     position: fixed;
     top: 20%;
     right: 0;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    z-index: var(--interpreter-zIndex);
 }
 
 
 :where(.c-interpreter) {
-    --interpreter-clr-list: #00294a;
-    --interpreter-size-svg: 1.6rem;
-    --interpreter-border-radious: .732rem;
-
     display: grid;
-    grid-template-columns: 6ch 30ch;
+    grid-template-columns: 3.2rem 17.2rem;
     place-content: center;
 }
 
@@ -28,10 +32,12 @@
     padding-inline-start: 0;
     background-color: var(--interpreter-clr-list);
     margin-block: 0;
-    box-shadow: 0px 2px 2px 2px #e3e3e3;
+    box-shadow: 0 2px 0 2px #c8c7c7;
     border-top-left-radius: var(--interpreter-border-radious);
     border-bottom-left-radius: var(--interpreter-border-radious);
     overflow: hidden;
+    display: grid;
+    grid-template-rows: auto;
 }
 
 .c-interpreter__list li:nth-child(n+2):nth-child(-n+3) {
@@ -48,7 +54,7 @@
     position: absolute;
     inset: 0 0 1px 50%;
     width: 90%;
-    border-bottom: 1px solid #e3e3e3;
+    border-bottom: 1px solid #c8c7c7;
     transform: translate(-50%);
     pointer-events: none;
 }
@@ -85,17 +91,15 @@
     opacity: 0;
 }
 
-
-
 :where(.c-interpreter__float-button svg) {
     --icon-size: 1.9rem;
 }
-
 
 :where(.c-interpreter__button) {
     --outline-offset: -0.32rem;
 
     width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -112,11 +116,9 @@
     cursor: grab;
 }
 
-
 .c-interpreter__button--drag:active {
     cursor: grabbing;
 }
-
 
 .c-interpreter__button--hidden {
     display: none;
@@ -137,8 +139,9 @@
     display: grid;
     grid-template-rows: 1fr auto;
     row-gap: var(--padding);
-    box-shadow: 2px 2px 2px 1px #e3e3e3;
+    box-shadow: 2px 2px 0 1px #c8c7c7;
     padding: var(--padding);
+    background-color: var(--interpreter-bg);
     border-radius: var(--interpreter-border-radious);
 }
 
@@ -147,8 +150,8 @@
     display: grid;
     grid-template-areas: 'stack';
     place-content: center;
-    border-top-left-radius: var(--interpreter-border-radious);
-    border-top-right-radius: var(--interpreter-border-radious);
+    border-top-left-radius: calc(var(--interpreter-border-radious) * var(--interpreter-border-ratio));
+    border-top-right-radius: calc(var(--interpreter-border-radious) * var(--interpreter-border-ratio));
     overflow: hidden;
     background: #121212;
 }
@@ -175,8 +178,8 @@
     grid-gap: 0.5rem;
     padding: 0.432rem;
     background-color: var(--interpreter-player-bg, var(--interpreter-clr-list));
-    border-bottom-left-radius: var(--interpreter-border-radious);
-    border-bottom-right-radius: var(--interpreter-border-radious);
+    border-bottom-left-radius: calc(var(--interpreter-border-radious) * var(--interpreter-border-ratio));
+    border-bottom-right-radius: calc(var(--interpreter-border-radious) * var(--interpreter-border-ratio));
 }
 
 .c-video__toggle-button {
