feat(Interpreter): enhance event handling and add visibility toggle for interpreter

--- a/src/components/Interpreter/src/interpreter.css
+++ b/src/components/Interpreter/src/interpreter.css
@@ -112,6 +112,10 @@
     font-weight: bold;
 }
 
+.c-interpreter__button--fake {
+    cursor: default;
+}
+
 .c-interpreter__button--drag {
     cursor: grab;
 }
