fix(styles): update switch check class and video transcription color variables

--- a/src/components/Switch/src/switch.css
+++ b/src/components/Switch/src/switch.css
@@ -22,7 +22,7 @@
     --switch-tumb: 1.5rem;
 }
 
-:where(.c-switch__check) {
+.c-switch__check {
     position: relative;
     padding: 0.125rem;
     display: inline-flex;
