--- a/src/components/Video/src/video.css
+++ b/src/components/Video/src/video.css
@@ -415,7 +415,7 @@
   position: absolute;
   top: 0;
   width: 100%;
-  color: var(--video-transcription-color);
+  color: var(--video-color);
   padding: clamp(1rem, 3%, 1.5rem);
   isolation: isolate;
   z-index: 2;
@@ -429,6 +429,7 @@
 
   .video-audio-description__overlay {
     border-radius: .5rem;
+    background-color: var(--video-bg);
   }
 }
 
